crates/ruff_linter/src/rules/nuff/snapshots/ruff_linter__rules__nuff__tests__alembic-downgrade_NUF003.py.snap
---
source: crates/ruff_linter/src/rules/nuff/mod.rs
---
NUF003 Alembic revision defines `downgrade`; undo a change in the next revision
  --> NUF003.py:9:5
   |
 9 | def downgrade() -> None:  # NUF003
   |     ^^^^^^^^^
10 |     pass
   |
